--- a/src/components/gamePage/gamePage.css
+++ b/src/components/gamePage/gamePage.css
@@ -33,9 +33,17 @@
 .shake-horizontal {
   animation: shake-horizontal 0.5s;
 }
-
+.shake-horizontal input{
+  background-color: red;
+  transition: background-color 0.5s ease-in-out;
+}
 .shake-vertical {
   animation: shake-vertical 0.5s;
+}
+
+.shake-vertical input{
+  background-color: green;
+  transition: background-color 0.5s ease-in-out;
 }
 
 .containerPunteggio {
@@ -44,12 +52,13 @@
 }
 
 .containerPunteggio p {
-  padding-right: 1vw;
+  padding-right: 1.2vw;
+  font-size: 1.5vw;
 }
 
 .containerPunteggio p b {
   padding-right: 1vw;
-  font-size: large;
+  font-size: 1.5vw;
 }
 
 img {
@@ -72,8 +81,35 @@ img {
 }
 
 input {
-  width: 15vw;
+  width: 14vw;
   height: 3vh;
   border-radius: 2vw;
+  background-color: white;
   transition: background-color 0.5s ease-in-out;
+  padding: 0.15vw 0.5vw;
+  font-size: 1.1vw;
+  border: 0.1vw solid black;
+}
+
+input:focus{
+  outline: none;
+  border: 0.2vw solid black;
+}
+
+.id{
+  font-size: 1.2vw;
+}
+
+.id b{
+  font-size: 1.4vw;
+}
+
+.containerAzioni button{
+  width: 3.5vw;
+  height: 2vw;
+  border-radius: 50vw;
+  font-weight: bold;
+  font-size: 1vw;
+  border: 0.1vw solid black;
+  padding: 0.25vw 0.25vw;
 }
